# nanograd

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  test.cpp
autograd/: autograd.hpp
